--- a/UI/noto-build-ui.html
+++ b/UI/noto-build-ui.html
@@ -152,31 +152,23 @@
             </div>
             <div class="row">
                 <div class="col-12">
-                <template v-if="options.scripts.length > 1">
                     <div class="row">
                         <div class="col-12 mb-3">
                             <label class="control-name h5 d-block">Writing Systems Priorities</label>
-                            <small class="text-secondary">Drag the selected writing systems to change priorities.</small>
+                            <small class="text-secondary">Order writing systems: in case of common glyphs between fonts, only the first found will be kept.</small>
+                        </div>
+                        <div class="col-12 mb-1" v-if="options.scripts.length < 2">
+                            <small class="text-dark mt-3">Select two or more writing systems, please.</small>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row" v-if="options.scripts.length > 1">
                         <div class="col-12 mb-1">
-                            <draggable v-model="options.scripts" group="scripts" @start="options.scripts_dragging=true" @end="options.scripts_dragging=false">
-                                <small class="bg-dark text-white rounded mr-1 mb-1 pt-1 pr-2 pb-1 pl-2 d-inline-block draggable" v-for="item in options.scripts">{{ item }} </small>
+                            <draggable v-model="options.scripts" group="scripts_order" @start="options.scripts_dragging=true" @end="options.scripts_dragging=false">
+                                <small class="bg-dark text-white rounded mr-1 mb-1 pt-1 pr-2 pb-1 pl-2 d-inline-block draggable" v-for="item in options.scripts">{{ item|scriptName }} </small>
                             </draggable>
                         </div>
                     </div>
                     <hr>
-                </template>
-                <template v-else>
-                    <div class="row">
-                        <div class="col-12 mb-1">
-                            <label class="control-name h5 d-block">Writing Systems Priorities</label>
-                            <small class="text-secondary">Select two or more writing systems, please.</small>
-                        </div>
-                    </div>
-                    <hr>
-                </template>
                 </div>
             </div>
             <div class="row">
