--- a/UI/noto-build-ui.html
+++ b/UI/noto-build-ui.html
@@ -6,66 +6,12 @@
         <title>Noto-Build UI</title>
         <link rel="preconnect" href="https://cdn.jsdelivr.net">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css" integrity="sha256-Ww++W3rXBfapN8SZitAvc9jw2Xb+Ixt0rvDsmWmQyTo=" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="index.css">
         <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.min.js" integrity="sha256-KSlsysqp7TXtFo/FHjb1T9b425x3hrvzjMWaJyKbpcI=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.10.2/Sortable.min.js" integrity="sha256-8Ww0c1qKDMdHT2+3s3369kzSXcgIrvqzSwzjdZ5qHDs=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/vuedraggable@2.24.1/dist/vuedraggable.umd.min.js" integrity="sha256-3ux9DyWlRqDg9v2ZHRlKrQPru/To6i2BfQv4lenuRfs=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/@fabiocaccamo/utils.js@0.11.0/dist/utils.min.js" integrity="sha256-S60ZC8AUyIS3MyisO+OjgRrgiJ86OIozBq4f/RLmYGg=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/clipboard.js@1.0.1/dist/clipboard.min.js" integrity="sha256-HUQP8SUHMJ/pHYah14Em47rjRwTvxaADBSuOJI9DuiU=" crossorigin="anonymous"></script>
-        <style>
-            html, body {
-                width: 100%;
-                height: 100%;
-            }
-            a, a:link, a:focus, a:hover, a:visited {
-                color: #000000;
-                text-decoration: underline;
-            }
-            a:focus, a:hover {
-                text-decoration-style: wavy;
-            }
-            .container {
-                max-width: 900px;
-            }
-            .disabled {
-                pointer-events: none;
-                opacity: 0.4;
-            }
-            .noselect,
-            label.custom-control-label {
-                /* https://stackoverflow.com/questions/3779534/how-do-i-disable-text-selection-with-css-or-javascript */
-              -webkit-touch-callout: none; /* iOS Safari */
-                -webkit-user-select: none; /* Safari */
-                 -khtml-user-select: none; /* Konqueror HTML */
-                   -moz-user-select: none; /* Firefox */
-                    -ms-user-select: none; /* Internet Explorer/Edge */
-                        user-select: none; /* Non-prefixed version, currently
-                                              supported by Chrome and Opera */
-            }
-            .draggable {
-                /* https://stackoverflow.com/questions/5697067/css-for-grabbing-cursors-drag-drop#18294634 */
-                cursor: move; /* fallback if grab cursor is unsupported */
-                cursor: grab;
-                cursor: -moz-grab;
-                cursor: -webkit-grab;
-            }
-            .draggable.sortable-chosen {
-                cursor: grabbing;
-                cursor: -moz-grabbing;
-                cursor: -webkit-grabbing;
-            }
-            .command-container {
-                position: sticky;
-                bottom: 0;
-                z-index: 10;
-                background-color: rgba(255, 255, 255, 0.9);
-            }
-            .command-container code {
-                pointer-events: all;
-                max-height: 90px;
-                overflow-y: scroll;
-                line-height: 1.4;
-            }
-        </style>
     </head>
     <body>
         <div id="app" class="container" v-if="ready">
